--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,13 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@shared/*": ["src/app/shared"],
+      "@components*": ["src/app/components"],
+      "@features/*": ["src/app/features"],
+      "@environments/*": ["src/environments"]
+    },
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
